# OncoAgent-Oncology-Research-Assistant

./: .env.example  .gitignore  README.md  agents.md  genai_pillars_audit.md  main.py  pyproject.toml  requirements.txt  skills.md
backend/: advisor.py  main.py  pyproject.toml  requirements.txt
backend/agents/: advisor.py  critic.py
backend/langraph/: agent_graph.py
backend/rag/: evaluate.py
backend/rag/chroma_db/: chroma.sqlite3
frontend/src/app/: page.tsx
plans/: backend_integration.md  langgraph_advisor.md  openai_integration.md  orchestrator_critic.md  rag_evaluation.md  rag_streaming.md  split_agent_graph.md  template.md
