[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.22",
    "datasets>=2.16.0",
    "fastapi>=0.110.0",
    "langchain>=0.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "llama-index>=0.10.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "openai>=1.12.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "ragas>=0.1.0",
    "uvicorn>=0.28.0",
]
